kubernetes/development/traefik-ingress/traefik-ingress.yaml
# ForwardAuth Middleware
# Forward authentication to https://sandbox.api.octy.ai/v1/account/authenticate
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
  namespace: octy-development
spec:
  forwardAuth:
    address: https://sandbox.api.octy.ai/v1/account/authenticate
    trustForwardHeader: true
    authResponseHeaders:
      - X-AUTH-JWT

---
# ADMIN AUTH MIDDLEWARE
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-auth
  namespace: octy-development
spec:
  basicAuth:
    secret: admin-authsecret

---
# TRUSTED APP AUTH MIDDLEWARE
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: trusted-app-auth
  namespace: octy-development
spec:
  basicAuth:
    secret: trusted-app-authsecret

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  namespace: octy-development
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: octy-development-ingress-https
  namespace: octy-development
spec:
  entryPoints:
    - websecure
  routes:
  # TODO: remove in production
  ##### INTERNAL ROUTES ######
    - match: Path(`/v1/internal/items`)
      kind: Rule
      services:
        - name: items-service
          port: 1028
    - match: Path(`/v1/internal/accounts`)
      kind: Rule
      services:
        - name: account-service
          port: 1024
    - match: Path(`/v1/internal/profiles`)
      kind: Rule
      services:
        - name: profiles-service
          port: 1027

    - match: Path(`/v1/internal/events`)
      kind: Rule
      services:
        - name: events-service
          port: 1029

    - match: Path(`/v1/internal/events/types`)
      kind: Rule
      services:
        - name: events-service
          port: 1029
    
    - match: Path(`/v1/internal/segments`)
      kind: Rule
      services:
        - name: segmentation-service
          port: 1030

    - match: Path(`/v1/internal/recommendations`)
      kind: Rule
      services:
        - name: recommendations-service
          port: 1032
        
  ############################
    - match: Path(`/v1/admin/account/create`)
      middlewares:
        - name: admin-auth
      kind: Rule
      services:
        - name: account-service
          port: 1024
    - match: Path(`/v1/account/authenticate`)
      kind: Rule
      services:
        - name: account-service
          port: 1024
    - match: Path(`/v1/admin/application/resources/format`)
      middlewares:
        - name: trusted-app-auth
      kind: Rule
      services:
        - name: admin-service
          port: 1025
    - match: Path(`/v1/admin/application/versioning`)
      middlewares:
        - name: trusted-app-auth
      kind: Rule
      services:
        - name: admin-service
          port: 1025
    - match: PathPrefix(`/v1/configurations/`)
      middlewares:
        - name : forward-auth
      kind: Rule
      services:
        - name: configurations-service
          port: 1026
    - match: PathPrefix(`/v1/retention/profiles`)
      middlewares:
        - name : forward-auth
      kind: Rule
      services:
        - name: profiles-service
          port: 1027
    - match: PathPrefix(`/v1/retention/items`)
      middlewares:
        - name : forward-auth
      kind: Rule
      services:
        - name: items-service
          port: 1028
    - match: PathPrefix(`/v1/retention/events`)
      middlewares:
        - name : forward-auth
      kind: Rule
      services:
        - name: events-service
          port: 1029
    - match: PathPrefix(`/v1/retention/segments`)
      middlewares:
        - name : forward-auth
      kind: Rule
      services:
        - name: segmentation-service
          port: 1030
  tls:
    secretName: octy-production-cert


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: octy-development-ingress-http
  namespace: octy-development
spec:
  entryPoints:
    - web
  routes:
      # TODO: remove in production
  ##### INTERNAL ROUTES ######
    - match: Path(`/v1/internal/items`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: items-service
          port: 1028
    - match: Path(`/v1/internal/accounts`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: account-service
          port: 1024
    - match: Path(`/v1/internal/profiles`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: profiles-service
          port: 1027

    - match: Path(`/v1/internal/events`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: events-service
          port: 1029

    - match: Path(`/v1/internal/events/types`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: events-service
          port: 1029
  
    - match: Path(`/v1/internal/segments`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: segmentation-service
          port: 1030

    - match: Path(`/v1/internal/recommendations`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: recommendations-service
          port: 1032

        
  ############################
    - match: Path(`/v1/admin/account/create`)
      middlewares:
        - name: admin-auth
        - name: https-only
      kind: Rule
      services:
        - name: account-service
          port: 1024
    - match: Path(`/v1/account/authenticate`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: account-service
          port: 1024
    - match: Path(`/v1/admin/application/resources/format`)
      middlewares:
        - name: trusted-app-auth
        - name: https-only
      kind: Rule
      services:
        - name: admin-service
          port: 1025
    - match: Path(`/v1/admin/application/versioning`)
      middlewares:
        - name: https-only
        - name: trusted-app-auth
      kind: Rule
      services:
        - name: admin-service
          port: 1025
    - match: PathPrefix(`/v1/configurations/`)
      middlewares:
        - name: https-only
        - name : forward-auth
      kind: Rule
      services:
        - name: configurations-service
          port: 1026
    - match: PathPrefix(`/v1/retention/profiles`)
      middlewares:
        - name: https-only
        - name : forward-auth
      kind: Rule
      services:
        - name: profiles-service
          port: 1027
    - match: PathPrefix(`/v1/retention/items`)
      middlewares:
        - name: https-only
        - name : forward-auth
      kind: Rule
      services:
        - name: items-service
          port: 1028
    - match: PathPrefix(`/v1/retention/events`)
      middlewares:
        - name: https-only
        - name : forward-auth
      kind: Rule
      services:
        - name: events-service
          port: 1029
    - match: PathPrefix(`/v1/retention/segments`)
      middlewares:
        - name: https-only
        - name : forward-auth
      kind: Rule
      services:
        - name: segmentation-service
          port: 1030
